--- a/index.html
+++ b/index.html
@@ -168,6 +168,84 @@
         <label for="sewerage-rating">Excellent</label>
         <input type="radio" name="sewerage-rating" value="5">
       </div>
+      d) &nbsp;Exterior :<br><br>
+      <div class="radio-btn">
+        <label for="exterior-rating">Poor</label>
+        <input type="radio" name="exterior-rating" value="1">
+        <label for="exterior-rating">Below Average</label>
+        <input type="radio" name="exterior-rating" value="2">
+        <label for="exterior-rating">Average</label>
+        <input type="radio" name="exterior-rating" value="3">
+        <label for="exterior-rating">Good</label>
+        <input type="radio" name="exterior-rating" value="4">
+        <label for="exterior-rating">Excellent</label>
+        <input type="radio" name="exterior-rating" value="5">
+      </div>
+      e) &nbsp;Interior :<br><br>
+      <div class="radio-btn">
+        <label for="interior-rating">Poor</label>
+        <input type="radio" name="interior-rating" value="1">
+        <label for="interior-rating">Below Average</label>
+        <input type="radio" name="interior-rating" value="2">
+        <label for="interior-rating">Average</label>
+        <input type="radio" name="interior-rating" value="3">
+        <label for="interior-rating">Good</label>
+        <input type="radio" name="interior-rating" value="4">
+        <label for="interior-rating">Excellent</label>
+        <input type="radio" name="interior-rating" value="5">
+      </div>
+      f) &nbsp;Plumbing :<br><br>
+      <div class="radio-btn">
+        <label for="plumbing-rating">Poor</label>
+        <input type="radio" name="plumbing-rating" value="1">
+        <label for="plumbing-rating">Below Average</label>
+        <input type="radio" name="plumbing-rating" value="2">
+        <label for="plumbing-rating">Average</label>
+        <input type="radio" name="plumbing-rating" value="3">
+        <label for="plumbing-rating">Good</label>
+        <input type="radio" name="plumbing-rating" value="4">
+        <label for="plumbing-rating">Excellent</label>
+        <input type="radio" name="plumbing-rating" value="5">
+      </div>
+      g) &nbsp;Maintenance level :<br><br>
+      <div class="radio-btn">
+        <label for="Maintenance-rating">Poor</label>
+        <input type="radio" name="Maintenance-rating" value="1">
+        <label for="Maintenance-rating">Below Average</label>
+        <input type="radio" name="Maintenance-rating" value="2">
+        <label for="Maintenance-rating">Average</label>
+        <input type="radio" name="Maintenance-rating" value="3">
+        <label for="Maintenance-rating">Good</label>
+        <input type="radio" name="Maintenance-rating" value="4">
+        <label for="Maintenance-rating">Excellent</label>
+        <input type="radio" name="Maintenance-rating" value="5">
+      </div>
+      h) &nbsp;Maintenance level :<br><br>
+      <div class="radio-btn">
+        <label for="Maintenance-rating">Poor</label>
+        <input type="radio" name="Maintenance-rating" value="1">
+        <label for="Maintenance-rating">Below Average</label>
+        <input type="radio" name="Maintenance-rating" value="2">
+        <label for="Maintenance-rating">Average</label>
+        <input type="radio" name="Maintenance-rating" value="3">
+        <label for="Maintenance-rating">Good</label>
+        <input type="radio" name="Maintenance-rating" value="4">
+        <label for="Maintenance-rating">Excellent</label>
+        <input type="radio" name="Maintenance-rating" value="5">
+      </div>
+      i) &nbsp;Maintenance level :<br><br>
+      <div class="radio-btn">
+        <label for="Maintenance-rating">Poor</label>
+        <input type="radio" name="Maintenance-rating" value="1">
+        <label for="Maintenance-rating">Below Average</label>
+        <input type="radio" name="Maintenance-rating" value="2">
+        <label for="Maintenance-rating">Average</label>
+        <input type="radio" name="Maintenance-rating" value="3">
+        <label for="Maintenance-rating">Good</label>
+        <input type="radio" name="Maintenance-rating" value="4">
+        <label for="Maintenance-rating">Excellent</label>
+        <input type="radio" name="Maintenance-rating" value="5">
+      </div>
     <input type="submit" class="submit">
     </form>
     </div>  
