Average and Valuation Done

--- a/index.html
+++ b/index.html
@@ -491,6 +491,18 @@
           <h3> Please Enter Exact Number</h3>
           a) Ready-Reckoner Rate : <input type="text" name="Ready-Reckoner" id="Ready-Reckoner" placeholder="Ready-reckoner rate in INR eg. if 4500Rs then enter 4500"><br>
           b) Area : <input type="text" name="area" id="area" placeholder="Area in Sq.ft. Please enter only Number eg. if 850sqft then enter 850"><br>
+          c) Age of Building :
+                <select class="drop-2" name="age_of_Building" id="Jogging">
+                  <option value="1">0 to 2</option>
+                  <option value="0.95">More than 2 upto 5</option>
+                  <option value="0.85">More than 5 upto 10</option>
+                  <option value="0.75">More than 10 upto 20</option>
+                  <option value="0.6">More than 20 upto 30</option>
+                  <option value="0.45">More than 30 upto 40</option>
+                  <option value="0.3">More than 40 upto 50</option>
+                  <option value="0.2">More than 50 upto 60</option>
+                  <option value="0.15">More than 60</option>
+                </select><br>
     <input type="submit" class="submit">
     </form>
     </div>  
