--- a/index.html
+++ b/index.html
@@ -486,8 +486,31 @@
                 <select class="drop-2" name="Jogging" id="Jogging">
                   <option value="1">Yes</option>
                   <option value="0">No</option>
-                </select><br>    
-          <h2>9. VALUATION DETAILS
+                </select><br>
+          <h2>9. TECHNICAL DETAILS</h2>
+          1) No of floors and height of each floor : <input type="text" name="tech-1" id="tech-1"><br>
+          2) Plinth area-floor-wise (As per Is:3861-1966) : <input type="text" name="tech-2" id="tech-2"><br>
+          3) Year of construction : <input type="text" name="tech-3" id="tech-3"><br>
+          4) Estimated future life : <input type="text" name="tech-4" id="tech-4"><br>
+          5) Type of construction - Load bearing walls/R.C.C. frame/steel frame : <input type="text" name="tech-5" id="tech-5"><br>
+          6) Type of Foundation : <input type="text" name="tech-6" id="tech-6"><br>
+          7) WALLS a)External walls : <input type="text" name="tech-7" id="tech-7"><br>
+          8) b) Partitions : <input type="text" name="tech-8" id="tech-8"><br>
+          9) Door and windows (floor wise) : <input type="text" name="tech-9" id="tech-9"><br>
+          10) Flooring (floor wise) : <input type="text" name="tech-10" id="tech-10"><br>
+          11) Finishing (floor wise) : <input type="text" name="tech-11" id="tech-11"><br>
+          12) Roofing and terracing : <input type="text" name="tech-12" id="tech-12"><br>
+          13) a) Internal wiring – surface or condult : <input type="text" name="tech-13" id="tech-13"><br>
+          14) b) Class of fitting superior / ordinary / poor : <input type="text" name="tech-14" id="tech-14"><br>
+          15) c) Sanitary installations : <input type="text" name="tech-15" id="tech-15"><br>
+          16) Compound installations : <input type="text" name="tech-16" id="tech-16"><br>
+          17) No. of lifts and capacity : <input type="text" name="tech-17" id="tech-17"><br>
+          18) Water facility : <input type="text" name="tech-18" id="tech-18"><br>
+          19) Other amenities : <input type="text" name="tech-19" id="tech-19"><br>
+          20) Roads & paving within the Compound : <input type="text" name="tech-20" id="tech-20"><br>
+
+
+          <h2>10. VALUATION DETAILS</h2>
           <h3> Please Enter Exact Number</h3>
           a) Ready-Reckoner Rate : <input type="text" name="Ready-Reckoner" id="Ready-Reckoner" placeholder="Ready-reckoner rate in INR eg. if 4500Rs then enter 4500"><br>
           b) Area : <input type="text" name="area" id="area" placeholder="Area in Sq.ft. Please enter only Number eg. if 850sqft then enter 850"><br>
