05-10 Florring Drop Down Change

--- a/index.html
+++ b/index.html
@@ -184,29 +184,29 @@
       </select><br>
       j) &nbsp;Flooring :
       <select class="drop-2" name="Flooring" id="Flooring">
-        <option value="1">Rough Shahabad</option>
-        <option value="2">Mozaic</option>
-        <option value="3">Kota</option>
-        <option value="4">Marbonite</option>
-        <option value="5">Marble</option>
+        <option value="1">Poor</option>
+        <option value="2">Below Average</option>
+        <option value="3">Average</option>
+        <option value="4">Good</option>
+        <option value="5">Excellent</option>
         <option value="0">None of the Above</option>
       </select><br>
       Others(specify) : <input type="text" name="Flooring-others" id="Flooring-Others" placeholder="Others(specify)"><br>
       k) &nbsp;Electrical fitting :
       <select class="drop-2" name="Electrical" id="Electrical">
-        <option value="1">Simple fitting</option>
-        <option value="2">Pipe fitting</option>
-        <option value="3">Patti fitting</option>
-        <option value="4">Partly concealed fitting</option>
-        <option value="5">Consealed fitting</option>
+        <option value="1">Poor</option>
+        <option value="2">Below Average</option>
+        <option value="3">Average</option>
+        <option value="4">Good</option>
+        <option value="5">Excellent</option>
       </select><br>
       l) &nbsp;Kitchen Platform :
       <select class="drop-2" name="Kitchen" id="Kitchen">
-        <option value="1">Kitchen katta not available</option>
-        <option value="2">Kitchen katta not having kitchen trolley</option>
-        <option value="3">Modular Kitchen not having proper natural ventilation</option>
-        <option value="4">Modular Kitchen with well ventilation</option>
-        <option value="5">Modular Kitchen with exaust fan/chimney</option>
+        <option value="1">Poor</option>
+        <option value="2">Below Average</option>
+        <option value="3">Average</option>
+        <option value="4">Good</option>
+        <option value="5">Excellent</option>
       </select><br>
       m) &nbsp;Parking :
       <select class="drop-2" name="Parking" id="Parking">
